# Vk-Template

./: CMakeLists.txt  Defines.hpp  Helpers.cpp  Helpers.hpp  README.md  main.cpp
shaders/: default-frag.spv  default.frag  default.vert
